# enblend-enfuse

./: .hgignore  AUTHORS  CMakeLists.txt  ChangeLog  ConfigureChecks.cmake  Makefile.am  Makefile.in  Makefile.scm  NEWS  NEWS.staging  README  READMEWIN  README_WINDOWS.txt  TODO  TODO-3.x  VERSION  config.h.cmake  configHaveFunction.cmake  configHaveHeader.cmake  configure.ac  configure.in  cross-configure.sh  cross-make.sh  enblend.cc  enblend.sln  enblend_msvc2003.sln  enblend_msvc2008.sln  mkinstalldirs
CMakeModules/: FindBoost.cmake  FindCXX11Compiler.cmake  FindDlopen.cmake  FindEXIV2.cmake  FindGLEW.cmake  FindGLUT.cmake  FindGSL.cmake  FindJPEG.cmake  FindLCMS.cmake  FindLCMS2.cmake  FindLibXMI.cmake  FindLibraryForCPU.cmake  FindMMANWIN32.cmake  FindOpenCL.cmake  FindOpenEXR.cmake  FindOptional.cmake  FindPNG.cmake  FindSTLport.cmake  FindTCmalloc.cmake  FindTIFF.cmake  FindVIGRA.cmake  FindZLIB.cmake  HuginMacros.cmake
doc/: CMakeLists.txt  CreateVersTexi.pl  Makefile.am  OpenFile.pm  Quote.pm  TexAux.pm  authors.texi  auxmac.tex  auxmac.texi  bug-reports.texi  cleantex  color-profiles.texi  colors.gp  common-advanced-options.tex  common-authors.tex  common-bug-reports.tex  common-color-spaces.tex  common-common-options.tex  common-expert-options.tex  common-external-masks.tex  common-fdl.tex  common-helpful-programs.tex  common-information-options.tex  common-interaction.tex  common-known-limitations.tex  common-layer-selection.tex  common-mask-template-characters.tex  common-metadata.tex  common-notation.tex  common-option-delimiters.tex  common-response-files.tex  common-standard-workflow.tex  common-understanding-masks.tex  common-workflow.tex  config.gp  config2tex  createdvi.cmake.in  custom.init  default.css  define2set.pl  (+103 more)
doc/examples/: Makefile.am
doc/examples/enfuse/: CMakeLists.txt  Makefile.am  Makefile.userweight.in  README.userweight  fixed_power.cc  generalized_gaussian.cl  interpolator.cc  interpolator.hh  linear.cc  root_finding.hh  sinc.cc  tabular.cc  templated_power.cc  variable_power.cc  variable_power.cl
include/: Makefile.am
include/vgl/: Makefile.am  vgl_polygon_scan_iterator.h  vgl_polygon_scan_iterator.txx
include/vigra/: CMakeLists.txt  Makefile.am  accessor.hxx  array_vector.hxx  basicimage.hxx  cachedfileimage.hxx  codec.hxx  colorconversions.hxx  diff2d.hxx  error.hxx  extraimagetraits.hxx  functorexpression.hxx  imageinfo.hxx  imageiterator.hxx  imageiteratoradapter.hxx  impex.hxx  impexalpha.hxx  inspectimage.hxx  iteratortraits.hxx  mathutil.hxx  matrix.hxx  numerictraits.hxx  pixelneighborhood.hxx  rational.hxx  rgbvalue.hxx  separableconvolution.hxx  stdcachedfileimage.hxx  stdconvolution.hxx  tiff.hxx  tinyvector.hxx  windows.h
include/vigra_ext/: Correlation.h  FitPolynom.h  FunctorAccessor.h  ImageTransforms.h  Interpolators.h  LayerImage.h  LoweSIFT.h  Makefile.am  MultiLayerImage.h  MultiThreadOperations.h  PointMatching.h  Pyramid.h  ROI.h  ROIImage.h  VignettingCorrection.h  XMIWrapper.h  blend.h  cachedfileimage.hxx  fillpolygon.hxx  impexalpha.hxx  ransac.h  stdcachedfileimage.hxx  tiffUtils.h  utils.h
m4/: _ac_latex_test.m4  ac_latex_class.m4  ac_latex_package.m4  ac_openmp.m4  ac_prog_ar.m4  ac_prog_latex.m4  ac_type_sig_atomic_t.m4  ax_check_apple_opengl.m4  ax_cxx_as_const.m4  ax_cxx_compile_stdcxx_11.m4  ax_opencl.m4
share/enfuse/: GNUmakefile  Makefile.am  README.userweight  fixed_power.cc  generalized_gaussian.cl  interpolator.cc  linear.cc  sinc.cc  tabular.cc  templated_power.cc  variable_power.cc
src/: CMakeLists.txt  DefaultSig.pm  Makefile.am  Makefile.nocygwin  allocate.h  alpha.cc  alternativepercentage.cc  alternativepercentage.h  anneal.h  assemble.cc  assemble.h  blend.cc  blend.h  bounds.cc  bounds.h  calculate_state_probabilities.cl  common.h  distance_transform_fh.cl  dynamic_loader.h  embrace  enblend.1  enblend.cc  enblend.h  enblend.vcproj  enblend_msvc2003.vcproj  enblend_msvc2008.vcproj  enfuse.1  enfuse.cc  enfuse.h  enfuse.vcproj  enfuse_msvc2003.vcproj  enfuse_msvc2008.vcproj  error_message.cc  error_message.h  exposure_weight.cc  exposure_weight.h  exposure_weight_base.h  filenameparse.cc  filenameparse.h  filespec.cc  (+60 more)
src/deghosting/: CMakeLists.txt  deghosting.cpp  deghosting.h  deghosting_mask.cpp  jbu.cpp  jbu.h  khan.cpp  khan.h  support.h  threshold.h
src/dynamic_loader/: CMakeLists.txt  Makefile.am  dynamic_loader.cc  dynamic_loader.h  dynamic_loader_implementation.cc  dynamic_loader_implementation.h  gmodule_implementation.cc  gmodule_implementation.h  null_implementation.h  posix_implementation.cc  posix_implementation.h  sunny_implementation.cc  sunny_implementation.h  win32_implementation.cc  win32_implementation.h
src/layer_selection/: Makefile.am  info.cc  info.h  layer_selection.cc  layer_selection.h  selector.cc  selector.h
src/vigra_impex/: CMakeLists.txt  Makefile.am  bmp.cxx  byteorder.cxx  byteorder.hxx  codecmanager.cxx  exr.cxx  gif.cxx  hdr.cxx  iccjpeg.c  iccjpeg.h  imageinfo.cxx  jpeg.cxx  png.cxx  png.hxx  pnm.cxx  rgbe.c  sun.cxx  tiff.cxx  tiff.hxx  viff.cxx  vigra_impex.vcproj  vigra_impex_msvc2003.vcproj  vigra_impex_msvc2008.vcproj  void_vector.cxx  void_vector.hxx
src/win32helpers/: CMakeLists.txt  Makefile.am  delayHelper.h  getopt_long.c  getopt_long.h  win32config.h
win32/: install.cmd
